Some refactoring of CSS.±

--- a/src/css/components/nav-button-mobile.css
+++ b/src/css/components/nav-button-mobile.css
@@ -20,10 +20,9 @@
     width: auto;
     padding-left: var(--sp);
   }
-
-
 }
 
+/* Text that says "menu" */
 .mobile-nav-button__label {
   position: absolute;
   clip: rect(1px, 1px, 1px, 1px);
