--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,6 +10,7 @@
 @import 'components/nav-button-wide.css';
 @import 'components/nav-primary.css';
 @import 'components/nav-secondary.css';
+@import 'components/header-buttons-mobile.css';
 @import 'components/header-search.css';
 @import 'components/social-container.css';
 @import 'components/search-button-mobile.css';
