--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -6,6 +6,15 @@
   }
 }
 
+.header__left {
+  position: relative;
+  z-index: 2;
+  align-self: stretch;
+  display: flex;
+  align-items: flex-end;
+  background-color: var(--blue);
+}
+
 .site-header__fixable {
   display: flex;
   align-items: flex-end;
@@ -78,22 +87,21 @@
   top: 0;
   z-index: 5; /* appear above overlay */
   transform: translatex(101%);
-  /* width: calc(100% - (2 * var(--sp))); */
   width: 100%;
   height: 100%;
-  padding: var(--sp);
-  padding-top: var(--sp3);
+  padding: var(--sp3) var(--sp) var(--sp);
   overflow: auto;
   max-width: 500px;
   background-color: white;
   transition: all 0.2s;
+  box-shadow: 0px 0px 72px rgba(0, 0, 0, 0.1);
 
   @media (--sm) {
     padding-top: var(--sp5);
   }
 
   @media (--md) {
-    padding-top: var(--sp7);
+    padding: var(--sp7) var(--sp3) var(--sp3);
   }
 
   @media (--nav) {
@@ -110,6 +118,7 @@
     align-items: center;
     justify-content: flex-end;
     transition: transform 0.2s;
+    box-shadow: none;
   }
 
   &[aria-expanded="true"] {
