Work on mobile second level nav.

--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -1,7 +1,6 @@
 .primary-nav {
   ul {
     list-style: none;
-    margin: 0;
   }
 
   li {
@@ -27,6 +26,7 @@
 }
 
 .primary-nav--level-1 {
+  margin: 0;
   padding: 0;
 
   @media (--nav) {
@@ -95,20 +95,22 @@
 
 /* Dropdown nav */
 .primary-nav--level-2 {
-  display: none;
-  padding-top: calc(1.5 * var(--sp));
+  margin-top: calc(1.5 * var(--sp));
   padding-left: calc(2.5 * var(--sp));
+  border-left: solid var(--sp) var(--blue);
+  margin-left: calc(-1 * var(--sp));
 
   @media (--nav) {
     position: absolute;
     top: calc(100% - (0.5 * var(--sp)));
     left: 50%;
     transform: translate(-50%, -20px);
-    display: block;
     visibility: hidden;
     padding: calc(3 * var(--sp)) var(--sp2);
     background: white;
     border-top: solid var(--blue) calc(0.5 * var(--sp));
+    border-left: 0;
+    margin-left: 0;
     border-radius: 0px 0px 2px 2px;
     width: 250px;
     box-shadow: 0 1px 36px rgba(0, 0, 0, 0.08);
