Work on moble second level navigation functionality.

--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -106,10 +106,13 @@
 /* Dropdown nav */
 .primary-nav--level-2 {
   flex-basis: 100%;
-  margin-top: calc(1.5 * var(--sp));
   padding-left: calc(2.5 * var(--sp));
   border-left: solid var(--sp) var(--blue);
   margin-left: calc(-1 * var(--sp));
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity 0.2s;
 
   @media (--md) {
     margin-left: calc(-1 * var(--sp3));
@@ -133,6 +136,9 @@
     box-shadow: 0 1px 36px rgba(0, 0, 0, 0.08);
     opacity: 0;
     transition: all 0.2s;
+    opacity: 1;
+    max-height: none;
+    overflow: visible;
 
     /* Arrow */
     &:after {
@@ -147,6 +153,12 @@
       border-right: solid 10px transparent;
       border-bottom: solid 10px var(--blue);
     }
+  }
+
+  &[aria-expanded="true"] {
+    margin-top: calc(1.5 * var(--sp));
+    max-height: none;
+    opacity: 1;
   }
 
   a {
