--- a/src/css/components/nav-button-mobile.css
+++ b/src/css/components/nav-button-mobile.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   -webkit-appearance: none;
+  background: transparent;
   position: relative;
   width: var(--sp2);
   height: var(--sp2);
