Ensure that growing underlines only span width of text within primary nav.

--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -23,7 +23,7 @@
         > a {
           display: block;
 
-          &:after {
+          span:after {
             content: none;
           }
         }
@@ -76,27 +76,32 @@
     a {
       position: relative;
       display: flex;
-      align-items: center;
-      padding: var(--sp2) 0;
 
-      &:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: calc(0.5 * var(--sp));
-        transform: scalex(0);
-        background: var(--blue);
-        transition: transform 0.2s;
-      }
-
-      &:hover,
-      &:focus {
-        outline: 0;
+      span {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        padding: var(--sp2) 0;
 
         &:after {
-          transform: scalex(1);
+          content: '';
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          height: calc(0.5 * var(--sp));
+          transform: scalex(0);
+          background: var(--blue);
+          transition: transform 0.2s;
+        }
+
+        &:hover,
+        &:focus {
+          outline: 0;
+
+          &:after {
+            transform: scalex(1);
+          }
         }
       }
     }
@@ -168,11 +173,14 @@
 
     @media (--nav) {
       display: block;
-      padding: calc(0.5 * var(--sp)) 0;
 
-      &:after {
-        transform-origin: left;
-        height: 3px;
+      span {
+        padding: calc(0.5 * var(--sp)) 0;
+
+        &:after {
+          transform-origin: left;
+          height: 3px;
+        }
       }
     }
   }
