--- a/src/css/components/nav-primary.css
+++ b/src/css/components/nav-primary.css
@@ -164,6 +164,10 @@
     margin-top: calc(1.5 * var(--sp));
     max-height: none;
     opacity: 1;
+
+    @media (--nav) {
+      margin-top: 0;
+    }
   }
 
   a {
