--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,10 @@
 @import 'components/utility.css';
 
 /* Components */
+@import 'components/breadcrumb.css';
+@import 'components/byline.css';
 @import 'components/header.css';
+@import 'components/hero.css';
 @import 'components/nav-button-mobile.css';
 @import 'components/nav-button-wide.css';
 @import 'components/nav-primary.css';
