--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 /* Components */
 @import 'components/breadcrumb.css';
 @import 'components/byline.css';
+@import 'components/embedded-media.css';
 @import 'components/header.css';
 @import 'components/hero.css';
 @import 'components/nav-button-mobile.css';
