Initial work on IE11 layout.

--- a/src/css/components/layout.css
+++ b/src/css/components/layout.css
@@ -8,6 +8,7 @@
 .grid-full {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 1fr;
   grid-column-gap: var(--sp);
 
   @media (--md) {
