--- a/src/css/components/layout.css
+++ b/src/css/components/layout.css
@@ -11,7 +11,7 @@
   grid-template-rows: 1fr;
   grid-column-gap: var(--sp);
 
-  @media (--md) {
+  @media (--grid-lg) {
     grid-template-columns: repeat(14, 1fr);
   }
 }
