--- a/src/css/components/base.css
+++ b/src/css/components/base.css
@@ -28,7 +28,7 @@ h1 {
   margin-bottom: var(--sp);
   font-weight: bold;
   font-size: 24px;
-  line-height: calc(1.5 * var(--sp));
+  line-height: var(--sp1-5);
   letter-spacing: -0.02em;
   color: #0D1214;
 
