--- a/src/css/components/main.css
+++ b/src/css/components/main.css
@@ -5,7 +5,7 @@ main {
 .text-content {
   -ms-grid-row: 2; /* IE11 will overlay the content above the hero without this. */
   grid-column: 1 / 7;
-  line-height: calc(1.5 * var(--sp));
+  line-height: var(--sp1-5);
   color: #313637;
 
   @media (--grid-lg) {
@@ -23,19 +23,19 @@ main {
     font-weight: bold;
     color: #0D1214;
     letter-spacing: -0.01em;
-    line-height: calc(1.5 * var(--sp));
+    line-height: var(--sp1-5);
 
     @media (--md) {
       font-size: 24px;
-      line-height: calc(2.5 * var(--sp));
+      line-height: var(--sp2-5);
     }
   }
 
   h2 {
-    margin: var(--sp2) 0 calc(1.5 * var(--sp));
+    margin: var(--sp2) 0 var(--sp1-5);
     letter-spacing: 0.12em;
     text-transform: uppercase;
-    line-height: calc(1.5 * var(--sp));
+    line-height: var(--sp1-5);
     font-size: 16px;
     color: black;
 
@@ -89,7 +89,7 @@ main {
       bottom: 0;
       left: 0;
       background: #F7F9FA;
-      width: calc(0.5 * var(--sp));
+      width: var(--sp0-5);
       height: calc(100% - 30px);
       margin-left: 4px;
 
